Listening to the big guy

--- a/www/xelement/src/pages/search.astro
+++ b/www/xelement/src/pages/search.astro
@@ -32,7 +32,7 @@ let reducing = list.reduce((result,current)=>{
 
 let literal = `
 [input]
-base_directory = "/vercel/path0/docs/"
+base_directory = "/docs/"
 exclude_html_selector = "pre.language"
 minimum_indexed_substring_length = 2
 frontmatter_handling = "Omit"
