--- a/www/xelement/src/pages/search.astro
+++ b/www/xelement/src/pages/search.astro
@@ -10,11 +10,12 @@ const list = []
 for(let route of await withMetaData(filteredPaths('all'))){
     const {props:{
         slug,directory,path,
-        data:{title,
+        data:{title,astro:{html}
     }}}=route
     list.push({
         url:`${directory}/${slug}/index.html`,
-        title:`${directory} ${slug.split('/').join(' ')}`
+        title:`${directory} ${slug.split('/').join(' ')}`,
+        contents:html
         })
 }
 let reducing = list.reduce((result,current)=>{
