--- a/www/xelement/src/components/Counter.astro
+++ b/www/xelement/src/components/Counter.astro
@@ -20,6 +20,7 @@ const {button:Button, span:Display, Counter} = XElement
     
     <Button 
         @click={(event,store)=>{
+            //This is a comment
         display.textContent = --store.count
     }}>
         -
