pushing a prebuilt stork index to the build

--- a/www/xelement/src/components/Stork/StorkSearch.astro
+++ b/www/xelement/src/components/Stork/StorkSearch.astro
@@ -8,7 +8,7 @@
 <StorkSearchBox
     @do={()=>{
         stork.initialize()
-        stork.downloadIndex("xelement", "res/stork/xelement.st")
+        stork.downloadIndex("xelement", "/xelement.st")
         stork.attach('xelement')
     }}>
     <input data-stork="xelement"/>
