--- a/www/xelement/src/layouts/components/Head.astro
+++ b/www/xelement/src/layouts/components/Head.astro
@@ -16,6 +16,6 @@ const stylesheets = [
       description={meta?.page_description}   
    />
    <!-- <SocialImage/>  -->
-    <Font name="Roboto" />
-    <Font name="Comforter" />
     <Stylesheet list={stylesheets}/>    
+    <!-- <Font family="Roboto" />
+    <Font family="Comforter" /> -->
