--- a/components/Fonts/Fonts.astro
+++ b/components/Fonts/Fonts.astro
@@ -86,12 +86,12 @@ if(!remote){
     <!-- External Font: '${family}' via HTTPS -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href='${APIBase}${family}${(weights && Array.isArray(weights)) ? ':wght@' + weights.join(';') : (weights && typeof weights === 'string') ? weights : '400'}&display=swap' rel="preload" as="stylesheet" type="text/css"> 
+    <link href='${APIBase}${family}${(weights && Array.isArray(weights)) ? ':wght@' + weights.join(';') : (weights && typeof weights === 'string') ? weights : '400'}&display=swap' rel="stylesheet" type="text/css"> 
     <!-- End of Font -->
     `
     :
     `
     <!-- External Font: '${family}' via CSS -->
-    <link rel="preload" as="stylesheet" href="/public/assets/fonts/${family}/${family}.css" type="text/css" />
+    <link rel="stylesheet" href="/public/assets/fonts/${family}/${family}.css" type="text/css" />
     `
 }
