--- a/www/xelement/src/layouts/components/RightSideBar.astro
+++ b/www/xelement/src/layouts/components/RightSideBar.astro
@@ -3,7 +3,7 @@ import TableOfContents from '../../components/TableOfContents.astro'
 const {headers}=Astro.props
 const githubEditUrl = `https://github.com/aFuzzyBear/astro-ui/blob/main/docs/XElement${Astro.request.url.pathname.replace(/\/docs/, '')}.md`;
 ---
-<aside class="rightbar .grid-right sticky-rightbar">
+<aside class="sticky-rightbar">
     <div class="">
         <h1>
             Something
