--- a/www/xelement/src/styles/main.scss
+++ b/www/xelement/src/styles/main.scss
@@ -27,7 +27,7 @@ html,body{opacity: 0;visibility: hidden}
         /* overflow-x: hidden; */
         overflow-wrap: break-word;
         scroll-behavior:smooth;
-        scroll-margin-top:2rem;
+        scroll-margin-top:25%;
     }
 
     html{
