[Stylesheet] use new directive to escape html
- fixes a warning when using astro@0.23
- I am unsure if this breaks old versions

--- a/components/Stylesheet/Stylesheet.astro
+++ b/components/Stylesheet/Stylesheet.astro
@@ -171,6 +171,6 @@ const populateSanitizer = async() =>{
 
 ---
     <!-- Stylesheets -->
-    {linkCSS}
-    {await populateSanitizer()}
+    <Fragment set:html={linkCSS} />
+    <Fragment set:html={await populateSanitizer()} />
     <!-- End of Stylesheets -->
