updated page routes

--- a/www/xelement/src/pages/docs/induction/[...slug].astro
+++ b/www/xelement/src/pages/docs/induction/[...slug].astro
@@ -4,7 +4,7 @@ import filterPaths from '../../../scripts/build/filteredPaths'
 import withMetaData from '../../../scripts/build/withMetaData'
 
 export async function getStaticPaths() {
-    const paths = filterPaths('sarahedits')
+    const paths = filterPaths('induction')
     return withMetaData(paths)
 }
 
