demo of gallery component

--- a/www/xelement/src/pages/index.astro
+++ b/www/xelement/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-// Component imports and setup JavaScript go here!
+import Gallery from '../components/Gallery.astro'
 ---
 
 <html lang="en">
@@ -31,5 +31,6 @@
 		<h3>
 			<a href="/docs/sarahedits/overview">Sarah's Edits</a>
 		</h3>
+		<Gallery/>
 	</body>
 </html>
