Goodbye Sarah's Edits,

--- a/www/xelement/src/pages/index.astro
+++ b/www/xelement/src/pages/index.astro
@@ -20,6 +20,9 @@ import Gallery from '../components/Gallery.astro'
 		<h2>Pick a card, any card . . . </h2>
 
 		<h3>
+			<a href="/docs/induction/overview">Induction</a>
+		</h3>
+		<h3>
 			<a href="/docs/api/overview">API</a>
 		</h3>
 		<h3>
@@ -27,9 +30,6 @@ import Gallery from '../components/Gallery.astro'
 		</h3>
 		<h3>
 			<a href="/docs/guides/myfirstcomponents">Guides</a>
-		</h3>
-		<h3>
-			<a href="/docs/sarahedits/overview">Sarah's Edits</a>
 		</h3>
 		<Gallery/>
 	</body>
