--- a/www/xelement/src/layouts/components/LeftSideBar.astro
+++ b/www/xelement/src/layouts/components/LeftSideBar.astro
@@ -6,6 +6,9 @@ const {menu,dir,...attrs}=Astro.props
 <aside class="leftbar  sticky-leftbar">
     <div class="sidebar__feature">
         <h3>
+            <a href="/docs/induction/overview">Induction</a>
+        </h3>
+        <h3>
             <a href="/docs/api/overview">API</a>
         </h3>
         <h3>
@@ -13,9 +16,6 @@ const {menu,dir,...attrs}=Astro.props
         </h3>
         <h3>
             <a href="/docs/guides/myfirstcomponents">Guides</a>
-        </h3>
-        <h3>
-            <a href="/docs/sarahedits/overview">Sarah's Edits</a>
         </h3>
         <h3>~~~</h3>
     </div>
