--- a/www/xelement/src/styles/docsLayout.scss
+++ b/www/xelement/src/styles/docsLayout.scss
@@ -5,7 +5,7 @@
 .container {
     height: 100%;
     display: grid; 
-    grid-template-columns: 12em 76em 12em; 
+    grid-template-columns: 1fr 3fr 1fr; 
     grid-template-rows: 1fr; 
     gap: 0px 1em; 
     grid-template-areas: 
@@ -16,11 +16,14 @@
   .rightbar { grid-area: rightbar; }
 
 main.layout{
-    @apply flex flex-row flex-wrap md:flex-nowrap items-start content-center justify-between w-full gap-2 pl-8;
+
+    max-width: 50vw;
 }
 .documentation{
     @apply w-max
 }
+
+
 .footer{
 
 }
@@ -37,7 +40,6 @@ main.layout{
 .sticky-rightbar {
     position:sticky;
     top:22%;
-    padding-right: 1em;
 }
 
 .sticky-leftbar {
@@ -70,4 +72,8 @@ footer {
     width: 80%;
     margin: 0 auto;
     border-top: 2px solid black;
+}
+
+.leftsidebar {
+    margin-left: 1.5em;
 }
