--- a/www/xelement_backup/src/layouts/DocumentLayout.astro
+++ b/www/xelement_backup/src/layouts/DocumentLayout.astro
@@ -135,7 +135,7 @@
 				}
 			}
 
-			@media (min-width: 72em) {
+			@media (min-width: 720px) {
 				.layout {
 					grid-template-columns:
 						20rem
