--- a/www/xelement/src/styles/docsLayout.scss
+++ b/www/xelement/src/styles/docsLayout.scss
@@ -5,14 +5,18 @@
 .container {
     height: 100%;
     display: grid; 
-    grid-template-columns: 1fr 3fr 1fr; 
-    grid-template-rows: 1fr; 
-    gap: 0px 1em; 
+    grid-template-columns: 1fr 2fr; 
+    gap: 1px; 
     grid-template-areas: 
-      "leftbar main rightbar"; 
+      "leftbar main"; 
   }
+
+  article {
+    max-width:50vh;
+  }
+  
   .leftbar { grid-area: leftbar; }
-  .main { grid-area: main; }
+  .main { grid-area: main;}
   .rightbar { grid-area: rightbar; }
 
 main.layout{
@@ -37,10 +41,7 @@ main.layout{
     top: 0;
     @apply bg-[color:var(--theme-bg-color)]
 }
-.sticky-rightbar {
-    position:sticky;
-    top:22%;
-}
+
 
 .sticky-leftbar {
     position:sticky;
@@ -77,3 +78,27 @@ footer {
 .leftsidebar {
     margin-left: 1.5em;
 }
+
+@media (max-width: 719px){
+    .sticky-rightbar {
+        display: none;
+    }
+  }
+
+  @media (min-width: 720px) {
+    .container {
+        height: 100%;
+        display: grid;
+        grid-template-columns: 1fr 3fr 1fr; 
+        grid-template-rows: 1fr; 
+        gap: 0px 1em; 
+        grid-template-areas: 
+          "leftbar main rightbar"; 
+      }
+      .sticky-rightbar {
+        position:sticky;
+        top:22%;
+        display: block;
+    }
+  
+  }
