--- a/www/xelement/src/components/ListBox.astro
+++ b/www/xelement/src/components/ListBox.astro
@@ -1,9 +1,9 @@
 ---
 import PrefetchLink from '../components/NavBar/PreFetchLink.astro'
 const {content:{name,href,meta}}=Astro.props
-const title = meta.title || meta.meta_title || name.split('-').join(' ')
-const description = meta.description || meta.page_description
-const sanitizer = (str)=> str?.replaceAll('<','&#60;').replaceAll('>','&#62;')
+const title = meta?.title?.api || meta?.title?.page || name.split('-').join(' ')
+const description = meta?.description?.page || meta.page_description || ''
+const sanitizer = (str)=> (str && str.replace('<','&#60;').replace('>','&#62;'))
 ---
     <div>
         <PrefetchLink href={href}>
