--- a/www/xelement/src/styles/main.scss
+++ b/www/xelement/src/styles/main.scss
@@ -12,7 +12,8 @@
     Have CSS turn off the HTML page in effect,
     Turn it back on as the last thing it does before closing the door
 */
-html,body{opacity: 0;visibility: hidden; width: 100vw;}
+html,body{opacity: 0;visibility: hidden; width: 98vw;}
+body {width: 98vw;}
 
 /**
     Tailwind Directives
