--- a/www/xelement/src/components/Header/Header.astro
+++ b/www/xelement/src/components/Header/Header.astro
@@ -29,7 +29,7 @@
         flex-wrap: wrap;
     }
     .navbar{
-        @apply flex flex-row content-center justify-between items-center;
+        @apply flex flex-row content-center justify-between items-center z-10;
         &_header{
             @apply p-4 pb-4 h-[25%];
         };
