--- a/www/xelement/src/styles/colors.scss
+++ b/www/xelement/src/styles/colors.scss
@@ -47,7 +47,8 @@
     --tailwind-quotes: var(--base-color-purple) ;
     --tailwind-theme-captions: var(--base-color-purple) ;
     //Prism syntax highlighting
-    --prism-bg: ;
+    --prism-bg:var(--base-color-light-greyish-blue);
+    --prism-bg-shadow:0px 4px 5px 0px rgb(137 137 157 / 50%), inset -2px -1px 8px 0px rgb(147 147 187 / 60%), inset 0px 0px 1px 0px #afa0a0;
     --prism-base: ;
     --prism-comment: ;
     --prism-block-comment: ;
