--- a/www/xelement/src/styles/prisim.scss
+++ b/www/xelement/src/styles/prisim.scss
@@ -9,7 +9,6 @@
  code[class*="language-"],
  pre[class*="language-"] {
      color: var(--prism-base);
-     background: none;
      font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
      font-size: 1em;
      text-align: left;
@@ -27,19 +26,28 @@
      -moz-hyphens: none;
      -ms-hyphens: none;
      hyphens: none;
- 
+     z-index: -999;
+    
+
  }
  
  /* Code blocks */
  pre[class*="language-"] {
      padding: 1em;
-     margin: .5em 0;
+     margin: .5em 1.5em;
      overflow: auto;
- }
+     border-radius: 13px;
+     backdrop-filter: blur(2px);
+     box-shadow:var(--prism-bg-shadow);
+     -webkit-border-radius: 13px;
+     -moz-border-radius: 13px;
+     -ms-border-radius: 13px;
+     -o-border-radius: 13px;
+}
  
  :not(pre) > code[class*="language-"],
  pre[class*="language-"] {
-     background: var(--prism-bg);
+     background-color: var(--prism-bg);
  }
  
  /* Inline code */
@@ -66,7 +74,7 @@
 }
  
  .token.punctuation {
-    color:var(--prism-);
+    color:var(--prism-punctuation);
 }
  
  .token.tag{
