search easier to see

--- a/www/xelement/src/components/Stork/StorkSearch.astro
+++ b/www/xelement/src/components/Stork/StorkSearch.astro
@@ -11,7 +11,7 @@
         stork.downloadIndex("xelement", "/xelement.st")
         stork.attach('xelement')
     }}>
-    <input data-stork="xelement"/>
+    <input data-stork="xelement" placeholder="Search..."/>
 </StorkSearchBox>
     <div data-stork="xelement-output"></div>
 <script src="https://files.stork-search.net/stork.js" hoist></script>
