--- a/www/xelement/src/styles/prisim.scss
+++ b/www/xelement/src/styles/prisim.scss
@@ -32,10 +32,17 @@
  
  /* Code blocks */
  pre[class*="language-"] {
-     padding: 1em;
-     margin: .5em 0;
+     padding: 1.2em;
+     margin: .5em 1.5em;
      overflow: auto;
- }
+     border-radius: 13px;
+     backdrop-filter: blur(2px);
+     box-shadow: var(--prism-bg-shadow);
+     -webkit-border-radius: 13px;
+     -moz-border-radius: 13px;
+     -ms-border-radius: 13px;
+     -o-border-radius: 13px;
+}
  
  :not(pre) > code[class*="language-"],
  pre[class*="language-"] {
