🎨 sorting out the dark background colour

--- a/www/xelement/src/styles/prisim.scss
+++ b/www/xelement/src/styles/prisim.scss
@@ -46,7 +46,7 @@
  
  :not(pre) > code[class*="language-"],
  pre[class*="language-"] {
-     background: var(--prism-bg);
+     background-color: var(--prism-bg);
  }
  
  /* Inline code */
