--- a/www/xelement/src/styles/colors.scss
+++ b/www/xelement/src/styles/colors.scss
@@ -157,7 +157,7 @@
     color-scheme: dark;
     color:var(--base-color-light-purple);
     --theme-bg-color:var(--base-color-slate);
-    --tailwind-bg-code: hsla(259, 40%, 40%,0.75);
+    --tailwind-bg-code: hsl(263deg 80% 40% / 32%);
     --tailwind-bg-pre: var(--base-color-purple);
     --tailwind-body-text: var(--base-snow);
     --tailwind-bold-text: hsl(240, 100%, 99%) ;
@@ -196,7 +196,7 @@
     --tailwind-invert-quotes: green;
     --tailwind-invert-theme-captions: green;
     //Prism syntax highlighting
-    --prism-bg:hsl(263deg 91% 8% / 33%);
+    --prism-bg:hsl(263deg 90% 43% / 33%);
     --prism-bg-shadow:0px 4px 5px -1px rgb(0 0 0 / 33%), inset -1px -1px 8px 0px rgb(0 0 0 / 32%), inset 0px 0px 0px 0px #2e2b46, 1px 1px 10px 3px rgb(9 15 30 / 80%);
     --prism-base: var(--base-snow) ;
     --prism-comment: ;
