Stylish updates made to the stylesheets

--- a/components/Stylesheet/Sanitizer.astro
+++ b/components/Stylesheet/Sanitizer.astro
@@ -1,10 +1,10 @@
 ---
 
-import {SanitizeList,SanitizerProps} from './types'
+import {SanitizerProps} from './types'
 
 const {sanitize} = Astro.props as SanitizerProps
 
-/**  */
+
 const LinkDetails = (path: string,):object=> ({path})
 
 const sanitizerURLS = {
