--- a/components/Stylesheet/Stylesheet.astro
+++ b/components/Stylesheet/Stylesheet.astro
@@ -1,113 +1,80 @@
 ---
-import {SanitizerProps,OpenProps} from './types'
-import SanitizerLink from './Sanitzer.astro'
-import OpenPropsLink from './OpenProps.astro'
-/**
- *  @function handleError
- *  @params err? - defaults to "No Stylesheets have been included"
- *  @throw Error to STDERR
- */
 function handelError(err){
     throw new ReferenceError(`❗ There is an Error with the <Stylesheet> component: \n${err}`)
 }
-
-/** Render Link Element */
-const renderLinkElement = ( path:string, media?:string, cors?:string, preload?:string, alternative?:boolean, title?:string ):string =>
-`<link ${preload ?`rel="preload stylesheet" as="style" ` : `rel=${alternative ? `"alternative stylesheet"` : `"stylesheet"`}`} type="text/css" href="${path}" ${media ? `media="${media}"`: ''} ${cors ? `crossorigin="${cors}"` : ''} ${title && alternative ? `title="${title}"`:''} />`
-
-interface StylesheetProps {
-    /** HREF location of the file */
-    href?: "npm:" | string ,
-    /** Media type for the stylesheet */
-    media?: string,
-    /** Preload the stylesheet */
-    preload?,
-    /** Alternative Stylesheet */
-    alternative?,
-    /** Alternative Stylesheet NAME */
-    title?:string,
-    /** CORS settings */
-    cors?:'anonymous'|'use-credentials',
+interface list{
+  href?:string,
+  media?:string,
+  preload?:boolean,
+  title?:string,
+  alternative?:boolean,
+  cors?:boolean | 'anonymous' | 'use-credentials'
 }
-interface Props extends StylesheetProps {
-    list?: StylesheetProps[]
-    sanitize?: SanitizerProps 
-    openProps?: OpenProps 
+interface Props extends list{
+  href?:string,
+  local?:string,
+  media?:string,
+  list?:list[],
 }
 
-// Acquiring values from props
-const {
-       list,
-       sanitize="none",
-       openProps = "none",
-       href: hrefValue,
-       media: mediaValue,
-       cors,
-       preload,
-       alternative,
-       title
-       } = Astro.props as Props
-const attributesList = list || []
+const {href,media,list, preload, title, alternative, cors} = Astro.props as Props
+console.log(Astro.props)
 
-if(!hrefValue && (!Array.isArray(list) || list.length === 0)){
-    handelError('No Stylesheets have been included!')
+let styleList = []
+
+const formatHref = (url:string) => {
+  const checkIfRelative = url.includes('src/') || url.includes('../')
+  const isNPM = url.startsWith('npm:') && url.endsWith('.css')
+  const isUnpkg = url.startsWith('unpkg:') && url.endsWith('.css')
+  if(checkIfRelative){
+    return handelError('Sorry this component does not support relative files from the \'src/\' directory')
+  }
+  if(isNPM && !isUnpkg){
+    return "https://cdn.skypack.dev/" + url.slice(4)
+  }
+  if(isUnpkg && !isNPM){
+    return "https://unpkg.com/" + url.slice(6)
+  }
+  return url
 }
-
-if (hrefValue) {
-    attributesList.push({
-        href: hrefValue,
-        media: mediaValue,
-        cors,
-        preload,
-        alternative,
-        title
-        })
+if(href && !list) {
+  styleList.push({
+    href,
+    media,
+    preload,
+    alternative,
+    cors,
+    title
+  })
 }
-
-const linkCSS = attributesList.map(
-    (attribute) =>{
-        const {
-            href,
-            media,
-            cors,
-            preload,
-            alternative,
-            title
-            } = attribute
-        let src = href.startsWith('npm:') && href.endsWith('.css')
-                    ? 'https://cdn.skypack.dev/' + href.slice(4)
-                    : href
-         return ({href:src,media,cors,preload,alternative,title})
-    }
-)
-
+if(list && !href){
+  styleList = list
+}
+if(list && href){
+  return handelError('Sorry you cannot have both props.href && props.list together')
+}
 
 ---
-    <!-- Managed Stylesheets -->
-    {
-        linkCSS.map(({href,media,cors,preload,alternative,title})=>(
-            <link 
-                href={href} 
-                {media ?? `media="${media}"`} 
-                {preload 
-                    ?`rel="preload" as="style" ` 
-                    : `rel=${alternative 
-                            ? `"alternative stylesheet"` 
-                            : `"stylesheet"`}
-                `} 
-                {title && alternative ? `title="${title}"`:''} 
-                {cors ?? `crossorigin` } 
-                type="text/css" 
-                />
 
-        ))
-    }
-    {
-        sanitize &&
-         <SanitizerLink sanitize={sanitize} />
-    }
-    {
-        openProps &&
-         <OpenPropsLink props={OpenProps} />
-    }
-    <!-- End of Stylesheets -->
+  {
+    styleList &&
+      styleList.map(async ({href:path,media,preload,title,alternative,cors})=>(
+        <>
+          <link 
+            href  = { formatHref(path) }
+            rel={
+              preload 
+              ? "preload"
+              : alternative 
+              ? "alternative stylesheet"
+              : "stylesheet"
+            }
+            media = { media ?? null }
+            title = { title && alternative ? title : null }
+            as    = { preload && "style" }
+            type  = "text/css"
+            crossorigin = {cors ?? null}
+          />
+        </>
+      ))
+  }
