--- a/components/Stylesheet/OpenProps.astro
+++ b/components/Stylesheet/OpenProps.astro
@@ -4,7 +4,7 @@ import {OpenProps} from './types'
 const {props} = Astro.props as OpenProps
 
 const openPropsURLS = {
-    "all":"https://unpkg.com/open-props@1.3.11/open-props.min.css"
+    "all":"https://unpkg.com/open-props@1.3.11/open-props.min.css",
     "animations": "https://raw.github.com/argyleink/open-props/main/src/props.animations.css",
     "aspects": "https://raw.github.com/argyleink/open-props/main/src/props.aspects.css",
     "blue-hsl": "https://raw.github.com/argyleink/open-props/main/src/props.blue-hsl.css",
