--- a/components/Stylesheet/Manager.astro
+++ b/components/Stylesheet/Manager.astro
@@ -1,6 +1,6 @@
 ---
 import {SanitizerProps,OpenProps,StylesheetProps} from './types'
-import SanitizerLink from './Sanitzer.astro'
+import SanitizerLink from './Sanitizer.astro'
 import OpenPropsLink from './OpenProps.astro'
 import StylesheetLink from './Stylesheet.astro'
 
