--- a/components/Stylesheet/OpenProps.astro
+++ b/components/Stylesheet/OpenProps.astro
@@ -1,5 +1,53 @@
 ---
-import {OpenProps} from './types'
+
+
+type OpenPropsList =
+  | "animations"
+  | "aspects"
+  | "blue-hsl"
+  | "blue"
+  | "borders"
+  | "colors-hsl"
+  | "colors"
+  | "cyan-hsl"
+  | "cyan"
+  | "easing"
+  | "fonts"
+  | "gradients"
+  | "grape-hsl"
+  | "grape"
+  | "gray-hsl"
+  | "gray"
+  | "green-hsl"
+  | "green"
+  | "highlights"
+  | "indigo-hsl"
+  | "indigo"
+  | "layouts"
+  | "lime-hsl"
+  | "lime"
+  | "media"
+  | "orange-hsl"
+  | "orange"
+  | "pink-hsl"
+  | "pink"
+  | "red-hsl"
+  | "red"
+  | "shadows"
+  | "sizes"
+  | "supports"
+  | "svg"
+  | "teal-hsl"
+  | "teal"
+  | "violet-hsl"
+  | "violet"
+  | "yellow-hsl"
+  | "yellow"
+  | "zindex";
+
+interface OpenProps {
+  props: OpenPropsList | OpenPropsList[] ;
+}
 
 const {props} = Astro.props as OpenProps
 
