--- a/components/Stylesheet/Sanitizer.astro
+++ b/components/Stylesheet/Sanitizer.astro
@@ -1,6 +1,20 @@
 ---
 
-import {SanitizerProps} from './types'
+
+type SanitizeList =
+  | "all"
+  | "bare"
+  | "forms"
+  | "assets"
+  | "typography"
+  | "reducedMotion"
+  | "sysUI"
+  | "modern"
+  | "monoUI";
+
+interface SanitizerProps {
+  sanitize?: SanitizeList |  SanitizeList[];
+}
 
 const {sanitize} = Astro.props as SanitizerProps
 
