--- a/components/Fonts/Fonts.astro
+++ b/components/Fonts/Fonts.astro
@@ -147,21 +147,31 @@ if (!remote) {
 }
 ---
 
-{remote
-  ? `
-    <!-- External Font: '${family}' via HTTPS -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="${APIBase}${family}${
-      weights && Array.isArray(weights)
-        ? ":wght@" + weights.join(";")
-        : weights && typeof weights === "string"
-        ? weights
-        : "400"
-    }&display=swap" rel="stylesheet" type="text/css"> 
-    <!-- End of Font -->
-    `
-  : `
-    <!-- External Font: '${family}' via CSS -->
-    <link rel="stylesheet" href="/public/assets/fonts/${family}/${family}.css" type="text/css" />
-    `}
+{remote ? (
+  <Fragment>
+    {`<!-- External Font: '${family}' via HTTPS -->`}
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href={`${APIBase}${family}${
+        weights && Array.isArray(weights)
+          ? ":wght@" + weights.join(";")
+          : weights && typeof weights === "string"
+          ? weights
+          : "400"
+      }&display=swap`}
+      rel="stylesheet"
+      type="text/css"
+    />
+    {`<!-- End of Font -->`}
+  </Fragment>
+) : (
+  <Fragment>
+    {`<!-- External Font: '${family}' via CSS -->`}
+    <link
+      rel="stylesheet"
+      href="/public/assets/fonts/${family}/${family}.css"
+      type="text/css"
+    />
+  </Fragment>
+)}
